--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,12 @@
       "sizes": "512x512",
       "type": "image/png"
     }
+    "icons": [
+  {
+    "src": "icons/icon-192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }
+]
   ]
 }
