manifest tamamlandı, ikonlar eklendi

--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,25 @@
 {
-  "name": "Enment - Festival Sosyal Harita",
+  "name": "Enment",
   "short_name": "Enment",
-  "id": "com.enment.app",
-  "description": "Festival ruhunu taşıyan sosyal harita uygulaması. Etkinlikleri keşfet, paylaş ve katıl!",
+  "description": "Festival temalı sosyal medya uygulaması",
   "start_url": "/index.html",
   "scope": "/",
   "display": "standalone",
-  "display_override": ["fullscreen", "minimal-ui"],
-  "background_color": "#ffffff",
-  "theme_color": "#6a0dad",
-  "orientation": "portrait",
-  "dir": "ltr",
+  "background_color": "#FFFFFF",
+  "theme_color": "#000000",
   "lang": "tr",
+  "orientation": "portrait",
+  "id": "com.enment.app",
   "icons": [
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "categories": ["social", "events", "lifestyle"],
-  "share_target": {
-    "action": "/events.html",
-    "method": "POST",
-    "enctype": "multipart/form-data",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
-    }
-  }
+  ]
 }
